# study-llm

./: .mise.toml  README.md  pyproject.toml
prompts/: sample.prompty  sample_schema.json  simple.prompty
src/: extract_poem.py  extract_poem_by_prompty.py  simple_prompty.py
tests/: conftest.py  test_extract_poem_by_prompty.py  test_simple_prompty.py
