[tool.poetry]
name = "study-llm"
version = "0.1.0"
description = ""
authors = ["rakuichi4817 <rakuichi4817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
