[tool.poetry]
name = "study-llm"
version = "0.1.0"
description = ""
authors = ["rakuichi4817 <rakuichi4817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
prompty = {extras = ["azure"], version = "^0.1.47"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "UP"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict_optional = true
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
follow_imports = "skip"